Finished the first stage of the project.

--- a/RI/files/html/sample.html
+++ b/RI/files/html/sample.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 	<header>
-		
+
 	</header>
-	<p> Prajitura cu ciocolata </p>
+	<p> Prajitură cu ciocolată </p>
 	<footer>
-		
+
 	</footer>
 </body>
 </html>
